Refactor payment-related classes to use Double instead of BigDecimal for monetary values; update tests accordingly